# use-case-solution

./: .Rhistory  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py  train.py
data/: multiclass_test.csv  multiclass_train.csv
ipynb/: naive_model.ipynb
quarto/: explore.html  explore.qmd
src/: README.md
src/R/: cpp_functions.cpp  r_functions.r
src/py/: logging_functions.py  model_factory.py  process_data.py  utils.py
src/yml/: LogisticRegression.yml  MLPClassifier.yml  RandomForest.yml  column_specifications.yml  metrics.yml
